# rust-course

./: .gitignore
2-lecture/: Cargo.toml
eight_homework/: Cargo.toml  README.md  diesel.toml
eight_homework/migrations/2025-03-24-150733_create_messages/: up.sql
eight_homework/shared/data_utils/: Cargo.toml
eight_homework/shared/data_utils/src/: lib.rs  models.rs  schema.rs
eight_homework/shared/file_utils/: Cargo.toml
eight_homework/shared/input_utils/: Cargo.toml
eight_homework/shared/input_utils/src/: lib.rs
eight_homework/shared/message_uitls/: Cargo.toml
eight_homework/shared/message_uitls/src/: lib.rs
eight_homework/src/: main.rs
eight_homework/src/client/: mod.rs
eight_homework/src/server/: mod.rs
eleventh_homework/: .env.dist  Cargo.toml  README.md  docker-compose.yml
eleventh_homework/migrations/2025-04-04-153624_add_user_id_to_messages/: down.sql  up.sql
eleventh_homework/shared/data_utils/: Cargo.toml  README.md
eleventh_homework/shared/data_utils/src/: models.rs  schema.rs
eleventh_homework/shared/file_utils/src/: lib.rs
eleventh_homework/shared/input_utils/: README.md
eleventh_homework/shared/input_utils/src/: lib.rs
eleventh_homework/shared/metric_utils/: Cargo.toml
eleventh_homework/shared/metric_utils/src/: lib.rs
eleventh_homework/src/: main.rs  routes.rs
eleventh_homework/src/client/: mod.rs
eleventh_homework/src/server/: mod.rs
eleventh_homework/templates/: index.html.tera  users.html.tera
eleventh_homework/templates/partials/: navigation.html.tera
fifth-homework/: .gitignore  Cargo.toml
first-homework/: Cargo.toml
fourth-homework/: Cargo.toml
fourth-homework-flume/: Cargo.toml
nineth_homework/: .gitignore  Cargo.toml  README.md
sixth-homework/: Cargo.toml  README.md
sixth-homework/shared/file_utils/: Cargo.toml
sixth-homework/shared/file_utils/src/: lib.rs
sixth-homework/shared/input_utils/: Cargo.toml  README.md
sixth-homework/shared/input_utils/src/: lib.rs
sixth-homework/shared/message_uitls/: Cargo.toml
sixth-homework/shared/message_uitls/src/: lib.rs
sixth-homework/src/: main.rs
sixth-homework/src/client/: mod.rs
sixth-homework/src/server/: mod.rs
(+54 files in other folders)
