[package]
name = "eleventh-homework"
version = "0.1.0"
edition = "2021"

[dependencies]
flume = "0.11.1"
log = {  version = "0.4.26", features = ["max_level_info"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
env_logger = "0.11.6"
message_utils = { path = "./shared/message_utils", version = "0.1.0"}
input_utils = { path = "./shared/input_utils", version = "0.1.0"}
file_utils = { path = "./shared/file_utils", version = "0.1.0"}
data_utils = { path = "./shared/data_utils", version = "0.1.0"}
metric_utils = { path = "./shared/metric_utils", version = "0.1.0"}

anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["full"] }
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.2.8", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0.218", features = ["derive"] }
prometheus = "0.14.0"

[workspace]
members = ["./shared/message_utils", "./shared/input_utils", "./shared/file_utils", "./shared/data_utils"]
